<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#cff8fe"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#15198c"
            android:fontFamily="cursive"
            android:text="@string/Cadastro"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20pt"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Nome"
                android:textAllCaps="true"
                android:textColor="#0019ff"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/Nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Senha"
                android:textAllCaps="true"
                android:textColor="#0019ff"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/Senha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.94"
                android:ems="10"
                android:inputType="textPassword" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Idade"
                android:textAllCaps="true"
                android:textColor="#0019ff"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/Data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Peso"
                android:textAllCaps="true"
                android:textColor="#0019ff"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/Peso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Altura"
                android:textAllCaps="true"
                android:textColor="#0019ff"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/Altura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:inputType="numberDecimal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/IMC2"
                android:textAllCaps="true"
                android:textColor="#0019ff"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/IMC2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:inputType="numberDecimal"
                android:editable="false"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Sexo"
                android:textAllCaps="true"
                android:textColor="#0019ff"
                android:textStyle="bold|italic" />

            <RadioGroup
                android:id="@+id/rgSexo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/Masculino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:text="@string/Mas"
                    android:textColor="#0019ff"
                    android:textStyle="bold|italic" />

                <RadioButton
                    android:id="@+id/Femenino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:text="@string/Fem"
                    android:textColor="#f90597"
                    android:textStyle="bold|italic" />

            </RadioGroup>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#15198c"
            android:fontFamily="cursive"
            android:text="@string/Meta"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20pt"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/Meta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pesoatual"
                android:textAllCaps="true"
                android:textColor="#0019ff"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/PesoAtual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="4"
                android:inputType="numberDecimal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meta"
                android:textColor="#0019ff"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/MetaAdquirir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="4"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Salvar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/botao_lindo2"
                android:onClick="Perfil"
                android:text="Salvar Perfil"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/Volta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/botao_lindo"
                android:onClick="Perfil"
                android:text="Voltar"
                android:textColor="#ffffff" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>