<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dafada"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_margin="5dp"
        android:background="@drawable/logo"
        android:gravity="center"
        android:textSize="12pt"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#028109" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/Catastro"
            android:layout_below="@+id/Catastro"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:text="@string/cadastro"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Catastro"
            android:layout_width="130dp"
            android:layout_height="110dp"
            android:layout_marginLeft="35dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/etidarperfil1"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:onClick="Telas"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/CalIMC"
            android:layout_width="130dp"
            android:layout_height="110dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="35dp"
            android:background="@drawable/peso23"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:onClick="Telas"
            android:layout_alignBaseline="@+id/Catastro"
            android:layout_alignBottom="@+id/Catastro"
            android:layout_alignParentEnd="true" />


        <TextView
            android:id="@+id/Alimentacao"
            android:layout_width="130dp"
            android:layout_height="110dp"
            android:background="@drawable/comida31"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:onClick="Telas"
            android:textStyle="bold"
            android:layout_above="@+id/textView9"
            android:layout_alignStart="@+id/Catastro" />


        <TextView
            android:id="@+id/Informacao"
            android:layout_width="130dp"
            android:layout_height="110dp"
            android:layout_alignBaseline="@+id/Alimentacao"
            android:layout_alignBottom="@+id/Alimentacao"
            android:layout_alignStart="@+id/CalIMC"
            android:background="@drawable/info10"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:onClick="Telas"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView7"
            android:layout_alignBottom="@+id/textView7"
            android:layout_alignStart="@+id/CalIMC"
            android:layout_marginStart="34dp"
            android:text="@string/IMC1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alimentacao"
            android:textStyle="bold"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/textView7"
            android:layout_marginBottom="36dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView8"
            android:layout_alignTop="@+id/textView9"
            android:text="@string/informacao"
            android:textStyle="bold" />

    </RelativeLayout>

</LinearLayout>